--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ vello_shaders = { version = "0.3.0", path = "vello_shaders" }
 bytemuck = { version = "1.18.0", features = ["derive"] }
 skrifa = "0.22.3"
 peniko = "0.2.0"
+kurbo = "0.11.1"
 futures-intrusive = "0.5.0"
 raw-window-handle = "0.6.2"
 smallvec = "1.13.2"
