--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,10 @@ vello_encoding = { version = "0.3.0", path = "vello_encoding" }
 vello_shaders = { version = "0.3.0", path = "vello_shaders" }
 bytemuck = { version = "1.18.0", features = ["derive"] }
 skrifa = "0.22.3"
+# The version of kurbo used below should be kept in sync
+# with the version of kurbo used by peniko.
 peniko = "0.2.0"
+# FIXME: This can be removed once peniko supports the schemars feature.
 kurbo = "0.11.1"
 futures-intrusive = "0.5.0"
 raw-window-handle = "0.6.2"
