--- a/vello_shaders/Cargo.toml
+++ b/vello_shaders/Cargo.toml
@@ -7,6 +7,12 @@ rust-version.workspace = true
 license.workspace = true
 repository.workspace = true
 
+[package.metadata.docs.rs]
+all-features = true
+# There are no platform specific docs.
+default-target = "x86_64-unknown-linux-gnu"
+targets = []
+
 [features]
 default = ["wgsl", "full", "cpu"]
 compile = ["dep:naga", "dep:thiserror"]
