Remove schemars dep, fix imports

--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -17,7 +17,7 @@ default = ["wgpu-profiler"]
 # wgpu (which means the dependency used in wgpu-profiler would be incompatible)
 wgpu-profiler = ["dep:wgpu-profiler", "vello/wgpu-profiler"]
 # Test for dependencies which implement std traits in ways that cause type inference issues.
-_ci_dep_features_to_test = ["dep:kurbo", "kurbo/schemars", "dep:schemars"]
+_ci_dep_features_to_test = ["dep:kurbo", "kurbo/schemars"]
 
 [lints]
 workspace = true
@@ -45,8 +45,6 @@ log = { workspace = true }
 tracing = { version = "0.1.40", features = ["log-always"] }
 # For _ci_dep_features_to_test feature tests.
 kurbo = { workspace = true, optional = true }
-# For _ci_dep_features_to_test feature tests.
-schemars = { version = "0.8.21", optional = true }
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
 # We use android_logger on Android
