Update dependencies and fix problems accordingly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ clippy.semicolon_if_nothing_returned = "warn"
 vello = { version = "0.3.0", path = "vello" }
 vello_encoding = { version = "0.3.0", path = "vello_encoding" }
 vello_shaders = { version = "0.3.0", path = "vello_shaders" }
+
 bytemuck = { version = "1.18.0", features = ["derive"] }
 skrifa = "0.25.0"
 # The version of kurbo used below should be kept in sync
@@ -59,6 +60,10 @@ thiserror = "2.0.3"
 wgpu = { version = "23.0.0" }
 log = "0.4.22"
 image = { version = "0.25.5", default-features = false }
+
+naga = { version = "23.0.0"}
+
+winit = { version = "0.30.5" }
 
 # Used for examples
 clap = "4.5.21"
