--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -37,7 +37,7 @@ clap = { workspace = true, features = ["derive"] }
 pollster = { workspace = true }
 wgpu-profiler = { workspace = true, optional = true }
 
-winit = "0.30.5"
+winit = { workspace = true }
 log = { workspace = true }
 
 # We're still using env-logger, but we want to use tracing spans to allow using
@@ -53,11 +53,11 @@ env_logger = "0.11.5"
 [target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
 vello = { workspace = true, features = ["hot_reload"] }
 vello_shaders = { workspace = true, features = ["compile"] }
-notify-debouncer-mini = "0.4.1"
+notify-debouncer-mini = "0.5.0"
 
 
 [target.'cfg(target_os = "android")'.dependencies]
-winit = { version = "0.30.5", features = ["android-native-activity"] }
+winit = { workspace = true, features = ["android-native-activity"] }
 android_logger = "0.14.1"
 
 tracing_android_trace = "0.1.1"
