Update to MSRV 1.82 in preparation for color (#745)
Co-authored-by: Kaur Kuut <strom@nevermore.ee>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,13 @@ version = "0.3.0"
 edition = "2021"
 # Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml, with the relevant README.md files
 # and with the MSRV in the `Unreleased` section of CHANGELOG.md.
-rust-version = "1.76"
+rust-version = "1.82"
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/linebender/vello"
 
 [workspace.lints]
-# LINEBENDER LINT SET - Cargo.toml - v2
+
+# LINEBENDER LINT SET - Cargo.toml - v3
 # See https://linebender.org/wiki/canonical-lints/
 rust.keyword_idents_2024 = "forbid"
 rust.non_ascii_idents = "forbid"
@@ -55,6 +56,8 @@ rust.unused_macro_rules = "warn"
 rust.unused_qualifications = "warn"
 rust.variant_size_differences = "warn"
 
+clippy.too_many_arguments = "allow"
+
 clippy.allow_attributes = "warn"
 clippy.allow_attributes_without_reason = "warn"
 clippy.cast_possible_truncation = "warn"
@@ -63,7 +66,7 @@ clippy.dbg_macro = "warn"
 clippy.debug_assert_with_mut_call = "warn"
 clippy.doc_markdown = "warn"
 clippy.exhaustive_enums = "warn"
-clippy.fn_to_numeric_cast_any = "warn" # Can't be forbid due to 'scenes' requiring an exception.
+clippy.fn_to_numeric_cast_any = "warn"
 clippy.infinite_loop = "warn"
 clippy.large_include_file = "warn"
 clippy.large_stack_arrays = "warn"
@@ -80,7 +83,6 @@ clippy.semicolon_if_nothing_returned = "warn"
 clippy.shadow_unrelated = "warn"
 clippy.should_panic_without_expect = "warn"
 clippy.todo = "warn"
-clippy.trivially_copy_pass_by_ref = "warn"
 clippy.unseparated_literal_suffix = "warn"
 clippy.use_self = "warn"
 clippy.wildcard_imports = "warn"
