--- a/vello_encoding/Cargo.toml
+++ b/vello_encoding/Cargo.toml
@@ -16,12 +16,6 @@ default-target = "x86_64-unknown-linux-gnu"
 targets = []
 
 [features]
-default = ["full"]
-
-# Enables support for the full pipeline including late-bound
-# resources (gradients, images and glyph runs)
-full = ["dep:skrifa", "dep:guillotiere", "dep:smallvec"]
-
 # Enables an optional GPU memory usage estimation utility. This can be used to
 # perform additional computations in order to estimate the minimum required allocations
 # for buffers backing bump-allocated GPU memory.
@@ -32,7 +26,7 @@ workspace = true
 
 [dependencies]
 bytemuck = { workspace = true }
-skrifa = { workspace = true, optional = true }
+skrifa = { workspace = true }
 peniko = { workspace = true }
-guillotiere = { version = "0.6.2", optional = true }
-smallvec = { workspace = true, optional = true }
+guillotiere = { version = "0.6.2" }
+smallvec = { workspace = true }
