Remove `buffer_labels` feature, no longer optional
This extra memory usage from this is tiny in comparison to even
a simple use of Vello, so simplify things by removing the feature
that made it optional.

--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -29,7 +29,7 @@ path = "src/main.rs"
 
 
 [dependencies]
-vello = { workspace = true, features = ["buffer_labels", "debug_layers"] }
+vello = { workspace = true, features = ["debug_layers"] }
 scenes = { workspace = true }
 
 anyhow = { workspace = true }
