--- a/vello/Cargo.toml
+++ b/vello/Cargo.toml
@@ -55,3 +55,4 @@ wgpu-profiler = { workspace = true, optional = true }
 thiserror = { workspace = true }
 # TODO: Add feature for built-in bitmap emoji support?
 png = { version = "0.17.14" }
+dagga = "0.2.1"
