--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -53,7 +53,7 @@ env_logger = "0.11.5"
 [target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
 vello = { workspace = true, features = ["hot_reload"] }
 vello_shaders = { workspace = true, features = ["compile"] }
-notify-debouncer-mini = "0.5.0"
+notify-debouncer-full = "0.4.0"
 
 
 [target.'cfg(target_os = "android")'.dependencies]
