--- a/examples/headless/Cargo.toml
+++ b/examples/headless/Cargo.toml
@@ -20,3 +20,6 @@ pollster = { workspace = true }
 env_logger = "0.11.6"
 png = "0.17.16"
 futures-intrusive = { workspace = true }
+
+[features]
+cosmic_text = ["scenes/cosmic_text"]
