--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,8 +101,7 @@ bytemuck = { version = "1.20.0", features = ["derive"] }
 skrifa = "0.26.0"
 # The version of kurbo used below should be kept in sync
 # with the version of kurbo used by peniko.
-# peniko = "0.2.0"
-peniko = { version = "0.2.0", git = "https://github.com/linebender/peniko.git", rev = "3462e19" }
+peniko = "0.3.0"
 # FIXME: This can be removed once peniko supports the schemars feature.
 kurbo = "0.11.1"
 futures-intrusive = "0.5.0"
