--- a/examples/scenes/Cargo.toml
+++ b/examples/scenes/Cargo.toml
@@ -11,6 +11,7 @@ workspace = true
 
 [dependencies]
 vello = { workspace = true }
+skrifa = { workspace = true }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 image = { workspace = true, features = ["jpeg"] }
@@ -18,6 +19,7 @@ rand = "0.8.5"
 
 # for pico_svg
 roxmltree = "0.20.0"
+bytemuck.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-time = { workspace = true }
