--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ clippy.wildcard_dependencies = "warn"
 vello = { version = "0.4.0", path = "vello" }
 vello_encoding = { version = "0.4.0", path = "vello_encoding" }
 vello_shaders = { version = "0.4.0", path = "vello_shaders" }
+vune = { path = "../vune/" }
 bytemuck = { version = "1.21.0", features = ["derive"] }
 skrifa = "0.26.4"
 # The version of kurbo used below should be kept in sync
