--- a/vello/Cargo.toml
+++ b/vello/Cargo.toml
@@ -44,7 +44,7 @@ workspace = true
 [dependencies]
 vello_encoding = { workspace = true }
 vello_shaders = { workspace = true, optional = true }
-bytemuck = { workspace = true }
+bytemuck = { workspace = true, features = ["const_zeroed"] }
 skrifa = { workspace = true }
 peniko = { workspace = true }
 wgpu = { workspace = true, optional = true }
