Start wiring up GPU render pipeline
Renders a simple scene to the GPU, first by doing coarse rasterization the same as cpu-sparse, then doing a single draw call.

--- a/vello_api/Cargo.toml
+++ b/vello_api/Cargo.toml
@@ -20,4 +20,4 @@ targets = []
 workspace = true
 
 [dependencies]
-peniko = { git = "https://github.com/linebender/peniko", rev = "aeded39" }
+peniko = "0.3.1"
