--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ members = [
     "examples/simple",
     "examples/simple_sdl2",
     "examples/with_winit",
+
+    "vello_hybrid/vello_api",
+    "vello_hybrid/vello_common",
+    "vello_hybrid/vello_cpu",
+    "vello_hybrid/vello_hybrid",
 ]
 
 [workspace.package]
