--- a/vello_sparse_strips/vello_api/Cargo.toml
+++ b/vello_sparse_strips/vello_api/Cargo.toml
@@ -8,7 +8,8 @@ edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 repository.workspace = true
-
+# Prevent accidental publishing until the initial release
+publish = false
 
 [dependencies]
 
