--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ members = [
     "examples/simple_sdl2",
     "examples/with_winit",
 
-    "vello_sparse_strips/vello_api",
-    "vello_sparse_strips/vello_common",
-    "vello_sparse_strips/vello_cpu",
-    "vello_sparse_strips/vello_hybrid",
+    "sparse_strips/vello_api",
+    "sparse_strips/vello_common",
+    "sparse_strips/vello_cpu",
+    "sparse_strips/vello_hybrid",
 ]
 
 [workspace.package]
