Introduce Vello Hybrid crates structure for CPU/GPU Sparse Rendering (#826)
This PR introduces a new modular crate structure for Vello Sparse Strips
implementation, based on the sparse rendering approach outlined in
[Potato: a hybrid CPU/GPU 2D renderer
design](https://docs.google.com/document/d/1gEqf7ehTzd89Djf_VpkL0B_Fb15e0w5fuv_UzyacAPU/edit?tab=t.0#heading=h.27frrspcevv4)
by @raphlinus.

Changes
- Added `vello_api` – Defines public API types shared across
implementations.
- Added `vello_common` – Provides shared data structures and utilities
for rendering.
- Added `vello_cpu` – Implements a CPU-based renderer optimized for
multithreading and SIMD.
- Added `vello_hybrid` – A hybrid CPU/GPU renderer, balancing workload
between CPU and GPU.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ members = [
     "examples/simple",
     "examples/simple_sdl2",
     "examples/with_winit",
+
+    "sparse_strips/vello_api",
+    "sparse_strips/vello_common",
+    "sparse_strips/vello_cpu",
+    "sparse_strips/vello_hybrid",
 ]
 
 [workspace.package]
