Add SIMD feature

--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -15,5 +15,8 @@ publish = false
 vello_api = { workspace = true }
 flatten = { workspace = true }
 
+[features]
+simd = ["vello_api/simd"]
+
 [lints]
 workspace = true
