Use kurbo and peniko as a direct dependency

--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -13,6 +13,8 @@ publish = false
 
 [dependencies]
 vello_api = { workspace = true }
+kurbo = { workspace = true }
+peniko = { workspace = true }
 
 [features]
 simd = ["vello_api/simd"]
