--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -12,6 +12,7 @@ repository.workspace = true
 publish = false
 
 [dependencies]
+kurbo = { workspace = true }
 peniko = { workspace = true }
 vello_common = { workspace = true }
 
