--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ members = [
     "sparse_strips/vello_api",
     "sparse_strips/vello_common",
     "sparse_strips/vello_cpu",
-    "sparse_strips/vello_hybrid", "sparse_strips/vello_toy",
+    "sparse_strips/vello_hybrid",
+    "sparse_strips/vello_toy",
 ]
 
 [workspace.package]
