Add the code for `vello_cpu` (#830)
Doesn't include the tests yet which will come after this PR. But I
verified that the tests pass using this setup.

--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -12,6 +12,9 @@ repository.workspace = true
 publish = false
 
 [dependencies]
+kurbo = { workspace = true }
+peniko = { workspace = true }
+vello_common = { workspace = true }
 
 [lints]
 workspace = true
