Add testing infrastructure

--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -16,5 +16,9 @@ kurbo = { workspace = true }
 peniko = { workspace = true }
 vello_common = { workspace = true }
 
+[dev-dependencies]
+oxipng = { workspace = true, features = ["freestanding", "parallel"] }
+image = { workspace = true, features = ["png"] }
+
 [lints]
 workspace = true
