--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,7 @@ futures-intrusive = "0.5.0"
 smallvec = "1.13.2"
 static_assertions = "1.1.0"
 thiserror = "2.0.11"
+oxipng = { version = "9.1.4", default-features = false }
 
 # The below crates are experimental!
 vello_api = { path = "sparse_strips/vello_api" }
