--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ env:
   # `vello_tests` uses `nv-flip`, which doesn't support Wasm.
   NO_WASM_PKGS: "--exclude vello_tests --exclude simple_sdl2"
   # The files stored in LFS the tests need to access
-  LFS_FILES: "vello_tests/snapshots/*.png,sparse_strips/vello_cpu/refs/*.png"
+  LFS_FILES: "vello_tests/snapshots/*.png\nsparse_strips/vello_cpu/refs/*.png"
 
 
 # Rationale
