--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ env:
   # List of packages that can not target Wasm.
   # `vello_tests` uses `nv-flip`, which doesn't support Wasm.
   NO_WASM_PKGS: "--exclude vello_tests --exclude simple_sdl2"
-  # The files stored in LFS the tests need to access
+  # The files stored in LFS the tests need to access, in JSON format
   LFS_FILES: '["vello_tests/snapshots/*.png", "sparse_strips/vello_cpu/refs/*.png"]'
 
 
@@ -215,7 +215,7 @@ jobs:
           enableCrossOsArchive: true
   
       - name: Checkout LFS files
-        run: git lfs checkout '${{ join(fromJson(env.LFS_FILES), fromJson(''' ''')) }}'
+        run: git lfs checkout '${{ join(fromJson(env.LFS_FILES), ''' ''') }}'
         continue-on-error: true
 
       - name: install stable toolchain
