Add the `vello_toy` crate (#834)
This PR proposes adding a new crate called `vello_toy`, containing a
number of small binary crates that build on top of the other ones.
Currently, it only contains a single tool `debug` that allows to
visualize the intermediate stages of sparse strip rendering, but I think
there are a couple of other binary crates that could be added in the
future (another idea of mine being for example building a very
simplistic SVG renderer on top of usvg).

The current tool I added serves two purposes:
- It allows newcomers to experiment with and visualize the various
stages, which makes it easier to understand how everything works.
- It allows for debugging issues in specific parts of the pipelines more
easily.

I know there could be more documentation on what exactly each of the
parameters mean and how to use them, but since it's mainly for
development purposes I think this should be enough. To demonstrate this
with an example:

```
cargo run --bin debug -- --path "M 5 5 L 40 23 L 7 44 Z"  --stages ls,ta,ti
```

![grafik](https://github.com/user-attachments/assets/6e6da0b5-5974-48c8-9ad1-3ae42f803d52)


```
cargo run --bin debug -- --path "M 5 5 L 40 23 L 7 44 Z"  --stages ls,ta,ti,sa,s
```

![grafik](https://github.com/user-attachments/assets/b13acd1c-d9a1-42e5-a3c2-e57c052a38bc)

```
cargo run --bin debug -- --path "M 5 5 L 40 23 L 7 44 Z"  --stages ls,ta,ti,sa,s,wt
```

![grafik](https://github.com/user-attachments/assets/910cb439-6615-426d-bf9e-6322b399e436)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "sparse_strips/vello_common",
     "sparse_strips/vello_cpu",
     "sparse_strips/vello_hybrid",
+    "sparse_strips/vello_toy",
 ]
 
 [workspace.package]
@@ -118,3 +119,4 @@ pollster = "0.4.0"
 web-time = "1.1.0"
 wgpu-profiler = "0.21.0"
 scenes = { path = "examples/scenes" }
+svg = "0.18.0"
