--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,4 +120,4 @@ web-time = "1.1.0"
 wgpu-profiler = "0.21.0"
 scenes = { path = "examples/scenes" }
 svg = "0.18.0"
-usvg = "0.45.0"
+usvg = { version = "0.45.0", default-features = false}
