feat: add performance measurement feature for GPU rendering

--- a/sparse_strips/vello_hybrid/Cargo.toml
+++ b/sparse_strips/vello_hybrid/Cargo.toml
@@ -11,6 +11,10 @@ repository.workspace = true
 # Prevent accidental publishing until the initial release
 publish = false
 
+[features]
+# Feature for development-only performance measurement
+perf_measurement = []
+
 [lints]
 workspace = true
 
