refactor: update winit and vello_hybrid examples to use ApplicationHandler

--- a/sparse_strips/vello_hybrid/Cargo.toml
+++ b/sparse_strips/vello_hybrid/Cargo.toml
@@ -22,16 +22,11 @@ workspace = true
 vello_common = { workspace = true }
 peniko = { workspace = true }
 kurbo = { workspace = true }
-
-# The following dependencies are for GPU. Maybe they should be optional, or the crate
-# structure refactored so there's a CPU-only renderer that doesn't depend on these.
 bytemuck = { workspace = true, features = ["derive"] }
-wgpu = { version = "24.0.1" }
-winit = "0.29"
-pollster = "0.3"
-async-executor = "1.8"
-color = { version = "0.2.3", features = ["bytemuck"] }
+wgpu = { workspace = true }
+winit = "0.30.9"
 
 [dev-dependencies]
+pollster = { workspace = true }
 png = "0.17.14"
 roxmltree = "0.20.0"
