Add strip benchmarks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,3 +122,4 @@ wgpu-profiler = "0.21.0"
 scenes = { path = "examples/scenes" }
 svg = "0.18.0"
 criterion = { version = "0.5.1", default-features = false }
+rand = { version =  "0.9.0", default-features = false, features = ["std_rng"]}
