--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -22,6 +22,7 @@ vello_common = { workspace = true }
 oxipng = { workspace = true, features = ["freestanding", "parallel"] }
 image = { workspace = true, features = ["png"] }
 criterion = { workspace = true }
+rand = { workspace = true }
 
 [lints]
 workspace = true
