[Vello Hybrid]: WebGL2 Compatibility (#872)
# Updates to Support WebGL2

In order to support WebGL2 downlevel compatibility, we need to:

- Use 16 byte aligned uniforms
- Allow passing surface formats to the renderer (`Bgra8Unorm` is not
supported)
- Use downlevel compatible WGSL (polyfill `unpack4x8unorm` and not use
`firstTrailingBit`)

---

Also, adds in CI and the below test crate:

## WebGL Demo

Uses Vello Hybrid with a WebGL2 backend in the browser - this is to
ensure Vello Hybrid remains WebGL2 compliant.

## Development

Run with `cargo run_wasm -p webgl`.

## Testing

In order to test this crate, you need to have [`wasm-pack`] installed.
Install it using
the steps found in https://rustwasm.github.io/wasm-pack/installer/.

Thereafter, for interactive test sessions, run:

```
wasm-pack test --chrome
# Navigate to printed URL
```

[`wasm-pack`]: https://rustwasm.github.io/wasm-pack/

## Example of success


![image](https://github.com/user-attachments/assets/796bd734-1796-4541-8c5d-4888af2fb0d3)


## Example of error


![image](https://github.com/user-attachments/assets/03f65ae3-fcf0-4ba7-a057-5c96339d054f)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -307,9 +307,18 @@ jobs:
         with:
           save-if: ${{ github.event_name != 'merge_group' }}
 
-      # TODO: Find a way to make tests work. Until then the tests are merely compiled.
       - name: cargo test compile
         run: cargo test --workspace ${{ env.NO_WASM_PKGS }} --locked --target wasm32-unknown-unknown --all-features --no-run
+
+      - name: install wasm-pack
+        uses: taiki-e/install-action@v2
+        with:
+          tool: wasm-pack
+
+      - name: check vello_hybrid is webgl compatible
+        run: wasm-pack test --headless --chrome
+        working-directory: sparse_strips/vello_hybrid/examples/webgl
+
 
   check-stable-android:
     name: cargo check (aarch64-android)
