--- a/sparse_strips/android_view_app/app/src/main/AndroidManifest.xml
+++ b/sparse_strips/android_view_app/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Rust Android Demo"
+        android:label="Vello Sparse Strips Demo"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
