Use automod for test generation

--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -10,11 +10,17 @@ license.workspace = true
 repository.workspace = true
 # Prevent accidental publishing until the initial release
 publish = false
+autotests = false
+
+[[test]]
+name = "tests"
+path = "tests/mod.rs"
 
 [dependencies]
 vello_common = { workspace = true }
 
 [dev-dependencies]
+automod = "1.0"
 oxipng = { workspace = true, features = ["freestanding", "parallel"] }
 image = { workspace = true, features = ["png"] }
 skrifa = { workspace = true }
