planeshift: Fork of the upstream
This is a fork of the upstream, without all of the backends yet,
and without the GL integration, and without some of the winit
integration.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ members = [
     "sparse_strips/vello_hybrid/examples/webgl",
     "sparse_strips/vello_hybrid/examples/winit",
     "sparse_strips/vello_toy",
+
+    "planeshift",
 ]
 
 [workspace.package]
