--- a/sparse_strips/vello_macros/Cargo.toml
+++ b/sparse_strips/vello_macros/Cargo.toml
@@ -1,17 +1,22 @@
 [package]
-name = "vello_cpu"
-version.workspace = true
-description = "A CPU-based renderer for Vello, optimized for SIMD and multithreaded execution."
+name = "vello_macros"
+description = "A number of macros used for testing in vello."
 categories = ["rendering", "graphics"]
 keywords = ["2d", "vector-graphics"]
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 repository.workspace = true
-# Prevent accidental publishing until the initial release
 publish = false
 
+[lib]
+proc-macro = true
+
 [dependencies]
+syn = { workspace = true }
+quote = { workspace = true }
+proc-macro2 = { workspace = true }
+vello_api = { workspace = true }
 vello_common = { workspace = true }
 
 [lints]
