Start work on the box blur

--- a/image_filters/vello_filters_cpu/Cargo.toml
+++ b/image_filters/vello_filters_cpu/Cargo.toml
@@ -10,7 +10,14 @@ repository.workspace = true
 # Prevent accidental publishing until the initial release
 publish = false
 
+[features]
+default = ["std"]
+std = ["color/std"]
+libm = ["color/libm"]
+
 [dependencies]
+tracing = { version = "0.1.41", default-features = false }
+color = { version = "0.2.3", default-features = false }
 
 [lints]
 workspace = true
