--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -16,7 +16,7 @@ vello_api = { workspace = true, default-features = true }
 # for pico_svg
 roxmltree = "0.20.0"
 bytemuck = { workspace = true, features = [] }
-skrifa = { workspace = true }
+skrifa = { git = "https://github.com/googlefonts/fontations", rev = "3b15121" }
 smallvec = { workspace = true }
 
 [features]
