--- a/sparse_strips/vello_hybrid/Cargo.toml
+++ b/sparse_strips/vello_hybrid/Cargo.toml
@@ -17,9 +17,28 @@ workspace = true
 [dependencies]
 vello_common = { workspace = true }
 bytemuck = { workspace = true, features = ["derive"] }
-wgpu = { workspace = true }
+wgpu = { workspace = true, optional = true }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+js-sys = { version = "0.3.77", optional = true }
+web-sys = { version = "0.3.77", features = [
+    "WebGl2RenderingContext",
+    "WebGlProgram",
+    "WebGlUniformLocation",
+    "WebGlBuffer",
+    "WebGlShader",
+    "WebGlTexture",
+], optional = true }
+
+[features]
+default = ["wgpu"]
+wgpu = ["dep:wgpu"]
+webgl = ["dep:js-sys", "dep:web-sys", "dep:naga"]
 
 [dev-dependencies]
 png = { workspace = true }
 pollster = { workspace = true }
 roxmltree = "0.20.0"
+
+[build-dependencies]
+naga = { version = "24.0.0", features = ["wgsl-in", "glsl-out"], optional = true }
