Make pico_svg optional
Signed-off-by: Nico Burns <nico@nicoburns.com>

--- a/sparse_strips/vello_hybrid/examples/scenes/Cargo.toml
+++ b/sparse_strips/vello_hybrid/examples/scenes/Cargo.toml
@@ -12,7 +12,7 @@ workspace = true
 [dependencies]
 bytemuck = { workspace = true, features = [] }
 vello_hybrid = { workspace = true }
-vello_common = { workspace = true }
+vello_common = { workspace = true, features = ["pico_svg"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 parley = { version = "0.3.0", default-features = false, features = ["std"] }
