--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -13,15 +13,15 @@ publish = false
 
 [dependencies]
 vello_api = { workspace = true, default-features = true }
-# for pico_svg
-roxmltree = "0.20.0"
 bytemuck = { workspace = true, features = [] }
 skrifa = { workspace = true }
 smallvec = { workspace = true }
+roxmltree = { version = "0.20.0", optional = true }
 
 [features]
 simd = ["vello_api/simd"]
 png = ["vello_api/png"]
+pico_svg = ["dep:roxmltree"]
 
 [lints]
 workspace = true
