Enable pico_svg for vello_hybrid examples
Signed-off-by: Nico Burns <nico@nicoburns.com>

--- a/sparse_strips/vello_hybrid/Cargo.toml
+++ b/sparse_strips/vello_hybrid/Cargo.toml
@@ -23,4 +23,5 @@ wgpu = { workspace = true }
 [dev-dependencies]
 png = { workspace = true }
 pollster = { workspace = true }
+vello_common = { workspace = true, features = ["pico_svg"] }
 roxmltree = "0.20.0"
